--- a/home.html
+++ b/home.html
@@ -41,17 +41,33 @@
         </ul>
       </div>
       <div class="profile">
-        <a href="home.html"
-          ><img class="just-profile" src="images/Ellipse395.png" alt=""
-        /></a>
-        <a href="javascript:void(0)" class="drop-button">
-          <img class="just-vector" src="images/Vector.png" alt="" />
-        </a>
-        <div class="drop-content">
-          <a href="#"> <img src="images/account.png" alt="" />Profil Saya</a>
-          <a href="#"> <img src="images/star.png" alt="" />Ubah Premium</a>
-          <a href="#"> <img src="images/login-variant.png" alt="" />Keluar</a>
-        </div>
+        <ul>
+          <li class="just-profile">
+            <a href="home.html"><img src="images/Ellipse395.png" alt="" /></a>
+          </li>
+          <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">
+              <img src="images/Vector.png" alt="" />
+            </a>
+            <div class="dropdown-content">
+              <div class="dropdown-profile">
+                <a href="#">
+                  <img src="images/account.png" alt="" />Profil Saya</a
+                >
+              </div>
+              <div class="dropdown-premium">
+                <a href="#">
+                  <img src="images/star.png" alt="" />Ubah Premium</a
+                >
+              </div>
+              <div class="dropdown-keluar">
+                <a href="#">
+                  <img src="images/login-variant.png" alt="" />Keluar</a
+                >
+              </div>
+            </div>
+          </li>
+        </ul>
       </div>
     </nav>
     <main>
@@ -212,7 +228,6 @@
                 <p>Genre</p>
                 <span class="arrow-footer">></span>
               </div>
-
               <div class="genre-list">
                 <div class="category">
                   <a href="Aksi.html">Aksi</a>
